# snowflake-cortex-agents

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/snowflake_cortex_agents/: __init__.py  client.py
tests/: test_client.py
