[project]
name = "snowflake-cortex-agents"
version = "0.1.0"
description = "Python client for Snowflake Cortex Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sam Dillard", email = "sam.dillard@snowflake.com" },
]
keywords = ["snowflake", "cortex", "agents", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/samdillard/snowflake-cortex-agents"
Repository = "https://github.com/samdillard/snowflake-cortex-agents"
Issues = "https://github.com/samdillard/snowflake-cortex-agents/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pyright>=1.1",
    "pre-commit>=3.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
